# Limitless-Lifelog-Manager

./: .env  README.md  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  pyproject.toml  requirements.txt  sample_transcripts.json  sample_transcripts_notion.json
Notion_CLI_Agent/: README.md  cli_notion_agent.py  project_props.json  tasks.json  todo_properties.json
examples/: process_sample_transcripts.py
sfa_lifelog_project_extractor/: README.md  count_all_available_logs.py  count_lifelogs.py  debug_limitless_api.py  keywords_config.json  run_with_whatsapp.sh  send_whatsapp_notifications.py  sfa_lifelog_project_extractor.py  sfa_lifelog_project_extractor_README.md  test_limitless_api.py
specs/: architecture.md
specs/config/: README.md  keywords.json
src/limitless_lifelog/: __init__.py  __main__.py
src/limitless_lifelog.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/limitless_lifelog/limitless/: api_client.py
src/limitless_lifelog/notion/: client.py
src/limitless_lifelog/transcripts/: extractor.py  processor.py  transformer.py
src/limitless_lifelog/utils/: config.py  keywords_config.py  state_manager.py
tests/: test_enhanced_tag_generation.py  test_processor.py  test_tag_generation.py
